feature: add all  api auth and fix port docker
